Added announcements, some trending

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
             </div>
         </div>
         <div class="header">
-    
+            <div class="top"></div>
+            <div class="lower"></div>
         </div>
         <div class="content">
             <div class="projects">
@@ -111,11 +112,33 @@
                     
                 </div>
             </div>
-            <div class="anncounements">
-
+            <div class="announcements">
+                <h2>Announcements</h2>
+                <div class="ann-sect">
+                    <div class="ann">
+                        <h4>Maintenance Scheduled</h4>
+                        <p> Our website will undergo maintenance on Friday from 1:00 AM to 3:00 AM. Some features may be temporarily unavailable.</p>
+                    </div>
+                    <hr>
+                    <div class="ann">
+                        <h4>New Feature: Light Mode</h4>
+                        <p>You can now enable light mode from the settings panel! Try it out for a more comfortable browsing experience.</p>
+                    </div>
+                    <hr>
+                    <div class="ann">
+                        <h4>Community Event</h4>
+                        <p>Join our virtual meetup this Thursday at 5:00 PM to discuss upcoming updates and share your ideas with the team.</p>
+                    </div>
+                </div>
             </div>
             <div class="trending">
-
+                <h2>Trending</h2>
+                <div class="trend-sect">
+                    <div class="trend">Trend</div>
+                    <div class="trend">Trend</div>
+                    <div class="trend">Trend</div>
+                    <div class="trend">Trend</div>
+                </div>
             </div>
             <div class="footer">
                 <a href="https://www.flaticon.com/free-icons/leaves" title="leaves icons">Leaves icons created by smashingstocks - Flaticon</a>
