added top row of header

--- a/index.html
+++ b/index.html
@@ -55,8 +55,24 @@
             </div>
         </div>
         <div class="header">
-            <div class="top"></div>
-            <div class="lower"></div>
+            <div class="top">
+                <div class="icon">
+                    <img src="search_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                </div>
+                <div class="search">
+                    <input type="text">
+                </div>
+                <div class="alarm">
+                    <img src="notifications_active_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                </div>
+                <div class="prof-pic">
+                    <img src="account_circle_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                </div>
+                <div class="username">@UserXyz</div>
+            </div>
+            <div class="lower">
+
+            </div>
         </div>
         <div class="content">
             <div class="projects">
@@ -134,16 +150,31 @@
             <div class="trending">
                 <h2>Trending</h2>
                 <div class="trend-sect">
-                    <div class="trend">Trend</div>
-                    <div class="trend">Trend</div>
-                    <div class="trend">Trend</div>
-                    <div class="trend">Trend</div>
+                    <div class="trend">
+                        <img class="prof-pic" src="account_circle_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                        <p class="username">@user3</p>
+                        <p class="desc" >Zeta Optimization</p>
+                    </div>
+                    <div class="trend">
+                        <img class="prof-pic" src="account_circle_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                        <p class="username">@user2</p>
+                        <p class="desc" >Delta Dashboard</p>
+                    </div>
+                    <div class="trend">
+                        <img class="prof-pic" src="account_circle_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                        <p class="username">@user4</p>
+                        <p class="desc" >Project Alpha</p>
+                    </div>
+                    <div class="trend">
+                        <img class="prof-pic" src="account_circle_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                        <p class="username">@user1</p>
+                        <p class="desc" >Gamma UI</p>
+                    </div>
                 </div>
             </div>
             <div class="footer">
                 <a href="https://www.flaticon.com/free-icons/leaves" title="leaves icons">Leaves icons created by smashingstocks - Flaticon</a>
             </div>
-            
         </div>
     </div>
     
