--- a/index.html
+++ b/index.html
@@ -71,7 +71,16 @@
                 <div class="username">@UserXyz</div>
             </div>
             <div class="lower">
-
+                <div class="prof-pic-low">
+                    <img src="account_circle_24dp_UNDEFINED_FILL0_wght400_GRAD0_opsz24.png" alt="">
+                </div>
+                <div class="user-low">
+                    <h3>Hi There</h3>
+                    <h2>FirstName LastName (@UserXyz)</h2>
+                </div>
+                <div class="but-low">New</div>
+                <div class="but-low">Upload</div>
+                <div class="but-low">Share</div>
             </div>
         </div>
         <div class="content">
